--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,22 @@
 name: frd
 channels:
+  - conda-forge
   - anaconda
   - defaults
 dependencies:
+  - attrs=21.4.0
   - blas=1.0
   - bottleneck=1.3.4
+  - brotlipy=0.7.0
   - bzip2=1.0.8
-  - ca-certificates=2022.4.26
-  - certifi=2022.6.15
+  - ca-certificates=2023.5.7
+  - certifi=2023.5.7
+  - cffi=1.15.0
+  - charset-normalizer=2.0.4
+  - coverage=7.2.2
+  - cryptography=37.0.1
+  - idna=3.3
+  - iniconfig=1.1.1
   - libcxx=12.0.0
   - libffi=3.4.2
   - libgfortran=5.0.0
@@ -18,20 +27,31 @@ dependencies:
   - numexpr=2.8.1
   - numpy=1.22.3
   - numpy-base=1.22.3
-  - openssl=1.1.1o
+  - openssl=1.1.1u
   - packaging=21.3
   - pandas=1.4.2
   - pip=21.2.4
+  - pluggy=1.0.0
+  - py=1.11.0
+  - pycparser=2.21
+  - pyopenssl=22.0.0
   - pyparsing=3.0.4
+  - pysocks=1.7.1
+  - pytest=7.1.2
+  - pytest-cov=4.1.0
   - python=3.10.4
   - python-dateutil=2.8.2
   - pytz=2022.1
   - readline=8.1.2
+  - requests=2.27.1
   - setuptools=61.2.0
   - six=1.16.0
   - sqlite=3.38.5
   - tk=8.6.12
+  - toml=0.10.2
+  - tomli=1.2.2
   - tzdata=2022a
+  - urllib3=1.26.9
   - wheel=0.37.1
   - xz=5.2.5
   - zlib=1.2.12
